Prevent calendar export popup from overflowing
Fixed max-width does not work well with different languages.

--- a/indico/web/client/js/react/components/ICSCalendarLink.module.scss
+++ b/indico/web/client/js/react/components/ICSCalendarLink.module.scss
@@ -66,7 +66,7 @@
 .popup:global(.ui.wide.popup) {
   display: inline-flex;
   min-width: 350px;
-  max-width: 450px;
+  max-width: unset;
 }
 
 .popup .content {
